# ai-startups-taxonomy-research

./: .cursorindexingignore  .gitignore  AGENTS.md  LOCAL_SETUP.md  QUICKSTART.md  README.md  classify.py  coding_instructions.md  pyproject.toml
evals/: __init__.py  __main__.py  batch_parity.py  classification.py  config.py  cost_extrapolate.py  dashboard_metrics.py  instances.py  jsonl_io.py  labeling.py  logprob_extract.py  paths.py  report.py  runner.py  sampling.py  scoring.py  two_pass.py  usage.py
plans/: PLAN.md  survivorship_bias_wayback_b6ee2697.plan.md  survivorship_insights_dashboard_73af61ef.plan.md  survivorship_tavily_pipeline_4088f370.plan.md  tavily_runner_workflow.md  wayback_tavily_demo_harness_4542ca04.plan.md
prompts/: Multiclassification_prompt.txt  binary_gate_prompt.txt  family_block_ai_native.txt  family_block_not_ai_native.txt  subclass_rad_prompt.txt  system_classifier_prompt.txt
scripts/: build_website_evidence.py  migrate_taxonomy_v21.py  oneoff_homepage_liveness.py  prepare_tavily_enrichment.py  run_tavily_crawl.py  sample_dataset.py  smoke_test_logprobs.py  sync_with_remote.sh  update_website_liveness.py
src/: __init__.py  builder.py  config.py  downloader.py  enrichment.py  formatter.py  logger.py  master_csv.py  merger.py  monitor.py  paths.py  schema.py  state.py  submitter.py  tavily_crawl.py  tokens.py  website_evidence.py
tests/: test_enrichment.py  test_formatter.py  test_schema.py  test_tavily_runner.py  test_tokens.py  test_two_pass_prompts.py
wayback_machine/: .gitignore  README.md  __init__.py  cdx.py  classifier_input.py  cohort.py  config.py  crawl_dead.py  evidence.py  extract.py  extract_dead.py  paths.py  (+4 more)
(+110 files in other folders)
